# PasswordManager

./: .gitignore  AIUsage.md  AutoLockChanges.md  Cargo.toml  DOCUMENTATION.odt  EXTENSION.md  EXTENSION_SIMPLE.md  Installation.md  README.md  TODO.md  documentation.md  install.cmd  install.ps1  install.sh  todo  uninstall.cmd  uninstall.ps1  uninstall.sh  ~$CUMENTATION.odt
.github/workflows/: rust.yml
documentation/: clear-quit-helper_functions.md  init-add-get-getall.md
src/: cli.rs  crypto.rs  edit_json.rs  errors.rs  extension_server.rs  lib.rs  main.rs  native_host.rs  passwords_file.json  session.rs  test.r  test.rs  vault_entry_manager.rs  vault_file_manager.rs  vault_manager.rs
tests/: integration_test.rs
vaults/: hallo.psdb  main.psdb  vault1.psdb
webextension/: background.js  content_script.js  host.json  manifest.json  popup.html  popup.js  register_host.reg
webextension_secure/: background.js  content_script.js  manifest.json
