[package]
name = "password_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rpassword = "7.4"
enc_file = "0.6.3"
secrecy = "0.10.3"
anyhow = "1.0"
indicatif = "0.18.3"
time = "0.3.44"
thread = "0.0.1"
rand = "0.9.2"
tempfile = "3.24.0"
arboard = "2"
zxcvbn = "2"
url = "2.5"